save all pre data with sharedprefs, ready to insert sqlite

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,4 +24,13 @@
     <string name="title_activity_initial_date_picker">InitialDatePickerActivity</string>
     <string name="validate_date">Validate</string>
 
+
+    <!-- activity_category.xml -->
+    <string name="title_activity_category">Category</string>
+    <string name="title_category">What category?</string>    
+
+    <!-- activity_priority.xml -->
+    <string name="title_activity_priority">Priority</string>
+    <string name="title_priority">Which priority?</string>
+
 </resources>
